# flutter_zero_copy

./: .gitignore  CONTRIBUTING.md  FINAL_REPORT.md  GIT_COMMIT_SUMMARY.md  INDEX.md  LAN_AUTH_NOTIFICATION_FIXED.md  LAN_IMPLEMENTATION_SUMMARY.md  NETWORK_PERMISSION_FIXED.md  OPENSPACE_SUMMARY.md  README.md  README_FINAL.md  REFACTORING_COMPLETE.md  ROADMAP.md  TROUBLESHOOTING_LAN.md  WORK_SUMMARY.md  analysis_options.yaml  build_cube_renderer.sh  dart_code_metrics.yaml  pubspec.yaml  validate.sh
.figma-flutter-tmp/: _generated.dart  audit.py  demo_main.dart  design_tokens.dart  figma_export.json  figma_nodes.json  home_standby_page.dart  icon_export.json
cube_renderer/: CMakeLists.txt  main.cpp
docs/: AUTH_ARCHITECTURE.md  AUTH_STATE_ARCHITECTURE_DIAGRAM.md  AUTH_STATE_MERMAID_DIAGRAM.md  CONNECTION_REFACTORING.md  DEVICE_CONTROL_MIGRATION.md  EXECUTION_COMPLETE.md  FINAL_CONFIRMATION.md  FINAL_PROJECT_REPORT.md  FINAL_REPORT.md  HOME_PAGE_MIGRATION.md  IMPLEMENTATION.md  INTEGRATION_TEST_REPORT.md  LAN_CONNECTION.md  LOGIN_FEATURE.md  LOGIN_STATE_MANAGEMENT.md  PROJECT_COMPLETE.md  RIVERPOD_MIGRATION.md  STATE_MANAGEMENT_DESIGN.md  TASK_EXECUTION_REPORT.md  TOOLS_TASK_COMPLETE.md  UI_MIGRATION_COMPLETE.md  ZERO_COPY_PRINCIPLES.md  a.md  architecture_cpp_flutter_interaction.md  device-monitor.md
integration_test/: app_test.dart
lib/: architecture_demo.dart  main.dart
macos/: Podfile
openspec/: config.yaml
phase0_validation/: QUICKSTART.md  README.md  SUMMARY.md
scripts/: bundle_orca_engine.sh
test/: sdk_integration_test.dart  widget_test.dart
(+190 files in other folders)
